unpackaged/main/default/objects/FSL_TroubleCode__c/FSL_TroubleCode__c.object-meta.xml
<CustomObject>
    <label>TroubleCode</label>
    <nameField>
        <displayFormat>TR Code -{0000}</displayFormat>
        <label>TroubleCode Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TroubleCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>