unpackaged/main/default/objects/FSL_TroubleCode__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>