unpackaged/main/default/objects/FSL_TroubleCode__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>