unpackaged/main/default/objects/FSL_TroubleCode__c/fields/TR_Code__c.field-meta.xml
<CustomField>
    <fullName>TR_Code__c</fullName>
    <label>TR Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>