unpackaged/main/default/objects/FSL_TroubleCode__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>TroubleCodes</relationshipName>
    <type>Lookup</type>
</CustomField>