unpackaged/main/default/objects/FSL_TroubleCode__c/validationRules/Restrict_Trouble_Code_Update_On_WO_Clear.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Trouble_Code_Update_On_WO_Clear</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL( Work_Order__r.Status , &#39;Cleared&#39;),NOT($Profile.Name=&quot;System Administrator&quot;))</errorConditionFormula>
    <errorMessage>Trouble code can not be updated after Work order is Cleared.</errorMessage>
</ValidationRule>