unpackaged/main/default/objects/FSL_TroubleCode__c/listViews/All_Trouble_Codes.listView-meta.xml
<ListView>
    <fullName>All_Trouble_Codes</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Type__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>Motorcycle</value>
    </filters>
    <label>All Trouble Codes</label>
</ListView>